Filter search tools; improve Docker and logging
Filter out Google/web-search tools from incoming requests and use the filtered tool list for prompt preparation, runtime registration, and execution (rely on UI toggle). Expand search tool name detection in browser parameter checks. Add raw request body and model dump logging in chat router. Update .dockerignore to ignore upload files and common cache dirs. Dockerfile: set TZ, copy sources with --chown, optimize directory creation and targeted chown to avoid expensive recursive chown, and keep Playwright install steps. Switch launcher logging stream handler to stdout. Simplify Windows start script to run python directly (remove poetry). Run supervisord Python process unbuffered (-u) to ensure realtime logs.

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,6 +9,11 @@ memory-bank/
 *.DS_Store
 venv/
 env/
-# auth_profiles/ # Handled by volume mount
-# certs/         # Handled by volume mount or generated in container
-# logs/          # Supervisord logs to stdout/stderr
+auth_profiles/  # Handled by volume mount
+certs/          # Handled by volume mount or generated in container
+logs/           # Supervisord logs to stdout/stderr
+upload_files/
+.coverage*
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
