--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
 [program:aistudioproxy]
-command=python launch_camoufox.py --headless --server-port %(ENV_SERVER_PORT)s --stream-port %(ENV_STREAM_PORT)s --internal-camoufox-proxy "%(ENV_INTERNAL_CAMOUFOX_PROXY)s" --helper ''
+command=python -u launch_camoufox.py --headless --server-port %(ENV_SERVER_PORT)s --stream-port %(ENV_STREAM_PORT)s --internal-camoufox-proxy "%(ENV_INTERNAL_CAMOUFOX_PROXY)s" --helper ''
 directory=/app
 autostart=true
 autorestart=true
